# CDataStructures

./: CMakeLists.txt  README.md
Include/: LinkedList.h  Queue.h  Stack.h  Utility.h
Src/LinkedList/: LinkedList.c
Src/Queue/: Queue.c
Src/Stack/: Stack.c
Test/: LinkedListTest.c  QueueTest.c  StackTest.c  TestRun.c  main.c
Util/: Utility.c
